<resources>
    <string name="app_name">test firebase</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="username">username</string>
    <string name="phone_number">Phone Number</string>
    <string name="user_details">User Details</string>
    <string name="log_out">Log Out</string>
</resources>